Split data and device endpoints
